--- a/front/style.css
+++ b/front/style.css
@@ -25,8 +25,6 @@ main {
     font-weight: bold;
     font-size: 3rem;
     height: 3.5rem;
-    text-shadow: 0 0 2px #0007;
-
 }
 
 #hive {
@@ -62,6 +60,7 @@ main {
 }
 
 button {
+    color: black;
     background-color: #f8dd5c;
     padding: 0.5rem 1.5rem;
     font-size: 1rem;
@@ -111,18 +110,22 @@ button:hover {
     left: 0;
     display: none;
     flex-direction: column;
+    backdrop-filter: blur(2px);
 }
 
 #words {
-    background-color: #97cde8;
+    background-color: #f8dd5c;
     max-width: 800px;
     margin: 10rem 2rem 2rem;
     padding: 1rem;
     border-radius: 1rem;
-    box-shadow: 0 0 2px #0005;
     font-weight: bold;
     transition: transform 0.2s ease-out;
     transform: translateX(0vh);
+}
+
+#words div {
+    margin: 0.5rem
 }
 
 #words.moved {
@@ -155,8 +158,45 @@ button:hover {
     text-align: center;
     width: 100vw;
     height: 100vh;
-    padding-top: 20vh;
+    padding: 1rem;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
     top: 0;
     left: 0;
     display: none;
+}
+
+
+#dots {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+#dots div {
+    background-color: #DDD;
+    width: 10px;
+    height: 10px;
+    border-radius: 50px;
+    transition: background-color 0.2s ease-in-out;
+}
+
+@media screen and (max-height: 750px) {
+    #points {
+        margin-top: 0;
+    }
+
+    #buttons {
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    button {
+        padding: 0.5rem;
+    }
 }
